Task 28 : Revise RateService and application.yaml