@@ -6,24 +6,21 @@ import com.exchangeapi.currencyexchange.entity.RateEntity;
 import com.exchangeapi.currencyexchange.entity.enums.EnumCurrency;
 import com.exchangeapi.currencyexchange.payload.response.RateResponse;
 import com.exchangeapi.currencyexchange.repository.RateRepository;
-import com.fasterxml.jackson.core.JsonProcessingException;
-import com.fasterxml.jackson.databind.ObjectMapper;
 import lombok.AllArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
+import org.springframework.http.HttpEntity;
 import org.springframework.http.HttpHeaders;
 import org.springframework.http.HttpMethod;
 import org.springframework.http.ResponseEntity;
 import org.springframework.stereotype.Service;
 import org.springframework.web.client.RestTemplate;
 
-import java.math.BigDecimal;
-import java.math.RoundingMode;
 import java.time.LocalDate;
 import java.util.Arrays;
 import java.util.List;
 import java.util.Map;
 import java.util.Optional;
-import java.util.function.Function;
+import java.util.stream.Collectors;
 
 import static com.exchangeapi.currencyexchange.constants.Constants.EXCHANGE_API_API_KEY;
 import static com.exchangeapi.currencyexchange.constants.Constants.EXCHANGE_API_BASE_URL;
@@ -36,84 +33,82 @@ public class RateService {
     private final RateRepository rateRepository;
     private final RestTemplate restTemplate;
 
-    private final ObjectMapper objectMapper;
-
     public RateDto calculateRate() {
-        log.info("ExchangeService | calculateRates() is called");
+        log.info("ExchangeService | calculateRates() is called | base null");
         return calculateRate(null);
     }
 
     public RateDto calculateRate(EnumCurrency base) {
-        log.info("ExchangeService | calculateRates(EnumCurrency base) is called");
+        log.info("ExchangeService | calculateRates(EnumCurrency base) is called | target null");
         return calculateRate(base, null);
     }
 
     public RateDto calculateRate(EnumCurrency base, List<EnumCurrency> targets) {
-        log.info("ExchangeService | calculateRates(EnumCurrency base, List<EnumCurrency> targets) is called");
+        log.info("ExchangeService | calculateRates(EnumCurrency base, List<EnumCurrency> targets) is called  | date null");
         return calculateRate(base, targets, null);
     }
 
     public RateDto calculateRate(EnumCurrency base, List<EnumCurrency> targets, LocalDate date) {
         log.info("ExchangeService | calculateRates is called");
 
-        EnumCurrency baseCurrency = Optional.ofNullable(base).orElse(EnumCurrency.EUR);
-        List<EnumCurrency> targetsCurrency = Optional.ofNullable(targets)
+        base = Optional.ofNullable(base).orElse(EnumCurrency.EUR);
+        targets = Optional.ofNullable(targets)
                 .orElseGet(() -> Arrays.asList(EnumCurrency.values()));
+        date = Optional.ofNullable(date).orElse(LocalDate.now());
 
-        LocalDate rateDate = Optional.ofNullable(date).orElse(LocalDate.now());
+        LocalDate finalDate = date;
+        EnumCurrency finalBase = base;
+        List<EnumCurrency> finalTargets = targets;
 
-        RateEntity rateEntity = rateRepository.findOneByDate(rateDate)
-                .orElseGet(() -> saveRatesFromApi(rateDate, base, targets));
+        RateEntity rateEntity = rateRepository.findOneByDate(date)
+                .orElseGet(() -> saveRatesFromApi(finalDate, finalBase, finalTargets));
 
         Map<EnumCurrency, Double> rates = rateEntity.getRates();
 
-        BigDecimal baseCurrencyRate = BigDecimal.valueOf(rates.get(baseCurrency));
-
-        List<RateInfoDto> rateList = rates.entrySet()
-                .stream()
-                .filter(entry -> targetsCurrency.contains(entry.getKey()))
-                .map(entryToRate(baseCurrencyRate))
-                .toList();
+        List<RateInfoDto> rateInfoList = targets.stream()
+                .map(currency -> new RateInfoDto(currency, rates.get(currency)))
+                .collect(Collectors.toList());
 
         return RateDto.builder()
-                .base(base)
-                .rates(rateList)
-                .date(rateDate)
+                .base(rateEntity.getBase())
+                .date(rateEntity.getDate())
+                .rates(rateInfoList)
                 .build();
     }
 
-    private Function<Map.Entry<EnumCurrency, Double>, RateInfoDto> entryToRate(BigDecimal baseCurrencyRate) {
-        return entry -> new RateInfoDto(
-                entry.getKey(),
-                BigDecimal.valueOf(entry.getValue()).divide(baseCurrencyRate, 5, RoundingMode.CEILING).doubleValue()
-        );
-    }
-
     private RateEntity saveRatesFromApi(LocalDate rateDate, EnumCurrency base, List<EnumCurrency> targets) {
+
+        log.info("ExchangeService | saveRatesFromApi is called");
+
         HttpHeaders headers = new HttpHeaders();
         headers.set("apikey", EXCHANGE_API_API_KEY);
         String url = getExchangeUrl(rateDate, base, targets);
-        ResponseEntity<String> response = restTemplate.exchange(url, HttpMethod.GET, null, String.class, headers);
-        try {
-            RateResponse rates = objectMapper.readValue(response.getBody(), RateResponse.class);
-            RateEntity entity = convert(rates);
-            entity.setDate(rateDate);
-            return rateRepository.save(entity);
-        } catch (JsonProcessingException e) {
-            throw new RuntimeException(e);
-        }
+
+        HttpEntity<?> requestEntity = new HttpEntity<>(headers);
+        ResponseEntity<RateResponse> responseEntity = restTemplate.exchange(url, HttpMethod.GET, requestEntity, RateResponse.class);
+
+        RateResponse rates = responseEntity.getBody();
+        RateEntity entity = convert(rates);
+        entity.setDate(rateDate);
+        return rateRepository.save(entity);
     }
 
     private String getExchangeUrl(LocalDate rateDate, EnumCurrency base, List<EnumCurrency> targets) {
+        log.info("ExchangeService | getExchangeUrl is called");
+
         String symbols = String.join("%2C", targets.stream().map(EnumCurrency::name).toArray(String[]::new));
         return EXCHANGE_API_BASE_URL + rateDate + "?symbols=" + symbols + "&base=" + base;
     }
 
     private RateEntity convert(RateResponse source) {
+        log.info("ExchangeService | convert is called");
+
+        Map<EnumCurrency, Double> rates = source.rates();
 
         return RateEntity.builder()
                 .base(source.base())
                 .date(source.date())
+                .rates(rates)
                 .build();
 
     }
